8265726: [lworld] C2 compilation fails with assert 'uses must be dominated by definitions'